--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~48.0.9",
@@ -22,8 +23,13 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.0.14",
     "eslint": "^8.36.0",
+    "jest": "^29.5.0",
+    "jest-expo": "^48.0.2",
     "prettier": "^2.8.6",
     "typescript": "^4.9.4"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
