--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "expo": "~48.0.9",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
