--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/react-native": "^12.0.1",
+    "@types/jest": "^29.5.0",
     "@types/react": "~18.0.14",
     "eslint": "^8.36.0",
     "jest": "^29.5.0",
@@ -31,7 +33,13 @@
     "typescript": "^4.9.4"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ]
   },
   "private": true
 }
